[gd_scene load_steps=20 format=2]

[ext_resource path="res://Assets/Formula Book/Formula Page/Formula Page bg.png" type="Texture" id=1]
[ext_resource path="res://Assets/Fonts/prstart.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/FormulaBook/Formula Page/Component.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Shop/Money Icon.png" type="Texture" id=4]
[ext_resource path="res://Assets/Formula Book/Formula Page/Delete Formula.png" type="Texture" id=5]
[ext_resource path="res://Assets/Formula Book/Formula Page/Load to Cauldron.png" type="Texture" id=6]
[ext_resource path="res://Assets/Fonts/[labels] basis33.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Assets/Formula Book/Formula Page/Favorites Button.png" type="Texture" id=8]
[ext_resource path="res://Assets/Formula Book/Formula Page/Mass Produce.png" type="Texture" id=9]
[ext_resource path="res://Scenes/FormulaBook/Formula Page/FormulaPage.gd" type="Script" id=10]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Money/Icon:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "TurningCoin"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Money/Icon:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="DynamicFont" id=3]
size = 35
extra_spacing_char = -5
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=9]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 50
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="DynamicFont" id=4]
size = 65
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[node name="FormulaPage" type="Node"]
script = ExtResource( 10 )

[node name="FormulaPageUI" type="Node2D" parent="."]

[node name="Background" type="TextureRect" parent="FormulaPageUI"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Money" type="AnimationPlayer" parent="FormulaPageUI"]
autoplay = "TurningCoin"
anims/RESET = SubResource( 1 )
anims/TurningCoin = SubResource( 2 )

[node name="Account" type="Label" parent="FormulaPageUI/Money"]
margin_left = 2178.0
margin_top = 105.0
margin_right = 2844.0
margin_bottom = 155.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 3 )
text = "Php 1, 000, 000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="Sprite" parent="FormulaPageUI/Money"]
position = Vector2( 909, 736 )
texture = ExtResource( 4 )
offset = Vector2( 1209, -612 )
hframes = 8

[node name="MassProdText" type="Label" parent="FormulaPageUI"]
margin_left = 328.0
margin_top = 1176.0
margin_right = 838.0
margin_bottom = 1207.0
custom_colors/font_color = Color( 0.623529, 0.262745, 0.27451, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 9 )
text = "Mass Produce for "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MassProdText2" type="Label" parent="FormulaPageUI"]
margin_left = 888.0
margin_top = 1176.0
margin_right = 1218.0
margin_bottom = 1207.0
custom_colors/font_color = Color( 0.623529, 0.262745, 0.27451, 1 )
custom_fonts/font = SubResource( 9 )
text = "P 2,000,000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FormulaPageControl" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="TextureButton" parent="FormulaPageControl"]
margin_left = 96.0
margin_top = 64.0
margin_right = 392.0
margin_bottom = 186.0
rect_pivot_offset = Vector2( 288, 680 )
texture_normal = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeleteFormula" type="TextureButton" parent="FormulaPageControl"]
margin_left = 1504.0
margin_top = 1128.0
margin_right = 1822.0
margin_bottom = 1259.0
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MassProduce" type="TextureButton" parent="FormulaPageControl"]
margin_left = 1920.0
margin_top = 1128.0
margin_right = 2238.0
margin_bottom = 1259.0
texture_normal = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadCauldron" type="TextureButton" parent="FormulaPageControl"]
margin_left = 2312.0
margin_top = 1128.0
margin_right = 2630.0
margin_bottom = 1259.0
texture_normal = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FormulaNote" type="TextEdit" parent="FormulaPageControl"]
anchor_right = 10.6
anchor_bottom = 6.6
margin_left = 328.0
margin_top = 408.0
margin_right = 1056.0
margin_bottom = 816.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "Consectetur a erat nam at lectus urna duis convallis. Etiam tempor orci eu lobortis. Pulvinar elementum integer enim neque volutpat ac tincidunt vitae semper. Porta nibh venenatis cras sed felis eget velit aliquet sagittis. "
wrap_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FormulaName" type="LineEdit" parent="FormulaPageControl"]
margin_left = 1272.0
margin_top = 272.0
margin_right = 1662.0
margin_bottom = 338.0
custom_colors/font_color = Color( 0.623529, 0.262745, 0.27451, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/focus = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
text = "Name"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Component1" parent="FormulaPageControl" instance=ExtResource( 3 )]
margin_left = 1728.0
margin_top = 416.0
margin_right = 1728.0
margin_bottom = 416.0

[node name="Component2" parent="FormulaPageControl" instance=ExtResource( 3 )]
margin_left = 2056.0
margin_top = 416.0
margin_right = 2056.0
margin_bottom = 416.0

[node name="Component3" parent="FormulaPageControl" instance=ExtResource( 3 )]
margin_left = 2376.0
margin_top = 416.0
margin_right = 2376.0
margin_bottom = 416.0

[node name="Component4" parent="FormulaPageControl" instance=ExtResource( 3 )]
margin_left = 1896.0
margin_top = 672.0
margin_right = 1896.0
margin_bottom = 672.0

[node name="Component5" parent="FormulaPageControl" instance=ExtResource( 3 )]
margin_left = 2232.0
margin_top = 672.0
margin_right = 2232.0
margin_bottom = 672.0

[connection signal="pressed" from="FormulaPageControl/BackButton" to="." method="_on_BackButton_pressed"]
